--- a/app/chat/chat.component.html
+++ b/app/chat/chat.component.html
@@ -1,20 +1,23 @@
 
-<!-- display the curren comments -->
-<pre>
-	{{ ChatService.comments | json }}
-</pre>
-
-<epic-chat-comments [hiden]="ChatService.comments" [comments]="ChatService.comments">
-</epic-chat-comments>
+<epic-chat-comments
+		[comments]="ChatService.comments"></epic-chat-comments>
 
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
-		<form name="commentForm" class="form">
-			<textarea class="form-control" #comment></textarea>
+		<form class="form" (ngSubmit)="onSubmit()">
+			<div class="form-group">
+				<textarea class="form-control"
+				          placeholder="New Message"
+				          [(ngModel)]="comment.message" required></textarea>
+			</div>
 
-			<button class="btn btn-primary" (click)="ChatService.add(comment.value)">
-				Add
-			</button>
+			<div class="form-group">
+				<button class="btn btn-primary"
+				        type="submit"
+				        [disabled]="!comment.message.length">
+					Add
+				</button>
+			</div>
 
 		</form>
 	</div>
